--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -26,48 +26,60 @@ body {
 }
 
 
-
-
 //? BOTON CARRITO
-
-.first-button {
-	background: rgb(140, 143, 140);
-	color: #fff;
+.cta {
 	border: none;
-	font-weight: 700;
-	font-size: 1em;
-	min-height: 60px;
-	width: 200px;
-	gap: 20px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	transition-duration: 0.6s;
+	background: none;
+	cursor: pointer;
   }
 
-  .main-section {
-	display: flex;
-	flex-direction: column;
-	height: 60px;
-	overflow: hidden;
-	align-items: flex-start;
+  .cta span {
+	padding-bottom: 7px;
+	letter-spacing: 4px;
+	font-size: 14px;
+	padding-right: 15px;
+	text-transform: uppercase;
   }
 
-  .main-section:hover .second-button , .main-section:hover .first-button {
-	transform: translateY(-60px);
+  .cta svg {
+	transform: translateX(-8px);
+	transition: all 0.3s ease;
   }
 
-  .second-button {
-	background: rgb(209, 15, 57);
-	color: #fff;
-	border: none;
-	font-weight: 700;
-	font-size: 1em;
-	min-height: 60px;
-	width: 200px;
-	gap: 20px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	transition-duration: 0.6s;
+  .cta:hover svg {
+	transform: translateX(0);
   }
+
+  .cta:active svg {
+	transform: scale(0.9);
+  }
+
+  .hover-underline-animation {
+	position: relative;
+	color: black;
+	padding-bottom: 20px;
+  }
+
+  .hover-underline-animation:after {
+	content: "";
+	position: absolute;
+	width: 100%;
+	transform: scaleX(0);
+	height: 2px;
+	bottom: 0;
+	left: 0;
+	background-color: #000000;
+	transform-origin: bottom right;
+	transition: transform 0.25s ease-out;
+  }
+
+  .cta:hover .hover-underline-animation:after {
+	transform: scaleX(1);
+	transform-origin: bottom left;
+  }
+
+
+
+  //? BTN VER MAS DEL HOME
+
+
